Issue #18659: fixed ordering of floated items in the toolbar so that they display normally in Firefox. Made fix to prevent overlapping of header.

--- a/source/less/screen.less
+++ b/source/less/screen.less
@@ -108,6 +108,7 @@ body {
 .left-float {
 	float: left;
 	display: block;
+	margin-right: 3px;
 }
 
 // XXX hack here (and in other places that reference issue 18397)
